--- a/test/downloads.html
+++ b/test/downloads.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KDex UI Components Test Page</title>
   <link rel="stylesheet" href="/test/main.css" type="text/css">
+  <meta name="path-separator" content="/_/">
 </head>
 
 <body>
@@ -13,24 +14,24 @@
     <div class="nav-dropdown">
       <a class="nav-button" href="/app">Home</a>
       <div class="nav-items">
-        <a href="/app/_/1/foo">Foo</a>
-        <a href="/app/_/2/bar">Bar</a>
+        <a href="/app/_/one/foo">Foo</a>
+        <a href="/app/_/two/bar">Bar</a>
       </div>
     </div>
     <div class="nav-dropdown">
       <a class="nav-button" href="/downloads">Downloads</a>
       <div class="nav-items">
-        <a href="/downloads/_/1/foo">Foo</a>
-        <a href="/downloads/_/2/bar">Bar</a>
+        <a href="/downloads/_/one/foo">Foo</a>
+        <a href="/downloads/_/two/bar">Bar</a>
       </div>
     </div>
   </nav>
 
   <div class="test-container">
     <h2>Downloads: Component Testing Area</h2>
-    <kdex-ui-app-container path-separator="/_/">
-      <kdex-example id="1"></kdex-example>
-      <kdex-example id="2"></kdex-example>
+    <kdex-ui-app-container id="app-container">
+      <kdex-example id="one"></kdex-example>
+      <kdex-example id="two"></kdex-example>
     </kdex-ui-app-container>
   </div>
 
