--- a/test/index.html
+++ b/test/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KDex UI Components Test Page</title>
-    <style>
-        body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KDex UI Components Test Page</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 2rem;
+    }
 
-        .test-container {
-            border: 1px solid #ddd;
-            padding: 2rem;
-            margin: 2rem 0;
-            border-radius: 8px;
-        }
+    .test-container {
+      border: 1px solid #ddd;
+      padding: 2rem;
+      margin: 2rem 0;
+      border-radius: 8px;
+    }
 
-        h1 {
-            color: #333;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 0.5rem;
-        }
-    </style>
+    h1 {
+      color: #333;
+      border-bottom: 2px solid #eee;
+      padding-bottom: 0.5rem;
+    }
+  </style>
 </head>
+
 <body>
-    <h1>KDex UI Components</h1>
+  <h1>KDex UI Components</h1>
 
-    <div class="test-container">
-        <h2>Component Testing Area</h2>
-        <kdex-ui-app-container>
-            <kdex-example></kdex-example>
-        </kdex-ui-app-container>
-    </div>
+  <kdex-ui-nav></kdex-ui-nav>
 
-    <script type="module">
-        import * as KDexUI from '/dist/index.js';
-        import '/test/fixtures/kdex-example.js';
+  <div class="test-container">
+    <h2>Component Testing Area</h2>
+    <kdex-ui-app-container path-separator="/_/">
+      <kdex-example id="1"></kdex-example>
+      <kdex-example id="2"></kdex-example>
+    </kdex-ui-app-container>
+    <kdex-ui-app-container path-separator="/_/">
+      <kdex-example></kdex-example>
+      <kdex-example></kdex-example>
+    </kdex-ui-app-container>
+  </div>
 
-        // Log available components
-        console.log('Loaded KDex UI Components:', KDexUI);
-    </script>
+  <script type="module">
+    import * as KDexUI from '/src/index.js';
+    import '/test/fixtures/kdex-example.js';
+
+    // Log available components
+    console.log('Loaded KDex UI Components:', KDexUI);
+  </script>
 </body>
+
 </html>
