--- a/test/downloads.html
+++ b/test/downloads.html
@@ -37,7 +37,7 @@
 
   <script type="module">
     import '@kdex/ui';
-    import '/test/fixtures/kdex-example.ts';
+    import '/test/fixtures/kdex-example.js';
   </script>
 </body>
 
