migrate to typescript

--- a/test/downloads.html
+++ b/test/downloads.html
@@ -35,8 +35,8 @@
   </div>
 
   <script type="module">
-    import '/src/index.js';
-    import '/test/fixtures/kdex-example.js';
+    import '@kdex/ui';
+    import '/test/fixtures/kdex-example.ts';
   </script>
 </body>
 
