--- a/test/downloads.html
+++ b/test/downloads.html
@@ -27,7 +27,7 @@
   </nav>
 
   <div class="test-container">
-    <h2>Home: Component Testing Area</h2>
+    <h2>Downloads: Component Testing Area</h2>
     <kdex-ui-app-container path-separator="(">
       <kdex-example id="1"></kdex-example>
       <kdex-example id="2"></kdex-example>
