--- a/test/login.html
+++ b/test/login.html
@@ -34,17 +34,11 @@
       </div>
     </div>
     <div class="nav-dropdown">
-      <a class="nav-button login" href="/login">Login</a>
+      <a class="nav-button logout" href="/logout">Logout</a>
     </div>
   </nav>
 
-  <div class="test-container">
-    <h2>Home: Component Testing Area</h2>
-    <kdex-ui-app-container id="app-container">
-      <kdex-example id="one"></kdex-example>
-      <kdex-example id="two"></kdex-example>
-    </kdex-ui-app-container>
-  </div>
+  <h1>Logged in</h1>
 
   <script type="module">
     import '@kdex/ui';
