--- a/test/logout.html
+++ b/test/logout.html
@@ -38,13 +38,7 @@
     </div>
   </nav>
 
-  <div class="test-container">
-    <h2>Home: Component Testing Area</h2>
-    <kdex-ui-app-container id="app-container">
-      <kdex-example id="one"></kdex-example>
-      <kdex-example id="two"></kdex-example>
-    </kdex-ui-app-container>
-  </div>
+  <h1>Logged out</h1>
 
   <script type="module">
     import '@kdex/ui';
