revert to original separator

--- a/test/index.html
+++ b/test/index.html
@@ -13,22 +13,22 @@
     <div class="nav-dropdown">
       <a class="nav-button" href="/app">Home</a>
       <div class="nav-items">
-        <a href="/app/(1)/foo">Foo</a>
-        <a href="/app/(2)/bar">Bar</a>
+        <a href="/app/_/1/foo">Foo</a>
+        <a href="/app/_/2/bar">Bar</a>
       </div>
     </div>
     <div class="nav-dropdown">
       <a class="nav-button" href="/downloads">Downloads</a>
       <div class="nav-items">
-        <a href="/downloads/(1)/foo">Foo</a>
-        <a href="/downloads/(2)/bar">Bar</a>
+        <a href="/downloads/_/1/foo">Foo</a>
+        <a href="/downloads/_/2/bar">Bar</a>
       </div>
     </div>
   </nav>
 
   <div class="test-container">
     <h2>Home: Component Testing Area</h2>
-    <kdex-ui-app-container path-separator="(">
+    <kdex-ui-app-container path-separator="/_/">
       <kdex-example id="1"></kdex-example>
       <kdex-example id="2"></kdex-example>
     </kdex-ui-app-container>
