mutate login links based on logged in status

--- a/test/downloads.html
+++ b/test/downloads.html
@@ -14,6 +14,7 @@
     data-logout-path="/~/o/logout"
     data-logout-label="Logout"
     data-logout-css-query="nav.nav .nav-dropdown a.logout"
+    data-logged-in="false"
   >
 </head>
 
