--- a/test/loggedin.html
+++ b/test/loggedin.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="/test/main.css" type="text/css">
   <meta name="kdex-ui"
     data-path-separator="/_/"
-    data-login-path="/~/o/login"
+    data-login-path="/~/oauth/login"
     data-login-label="Login"
     data-login-css-query="nav.nav .nav-dropdown a.login"
-    data-logout-path="/~/o/logout"
+    data-logout-path="/~/oauth/logout"
     data-logout-label="Logout"
     data-logout-css-query="nav.nav .nav-dropdown a.logout"
-    data-logged-in="true"
+    data-state-endpoint="/~/state/in"
   >
 </head>
 
