--- a/test/loggedin.html
+++ b/test/loggedin.html
@@ -7,6 +7,8 @@
   <title>KDex UI Components Test Page</title>
   <link rel="stylesheet" href="/test/main.css" type="text/css">
   <meta name="kdex-ui"
+    data-check-batch-endpoint="/~/check/batch"
+    data-check-single-endpoint="/~/check/single"
     data-login-path="/~/oauth/login"
     data-login-label="Login"
     data-login-css-query="nav.nav .nav-dropdown a.login"
