--- a/test/downloads.html
+++ b/test/downloads.html
@@ -44,14 +44,14 @@
   <div class="test-container">
     <h2>Downloads: Component Testing Area</h2>
     <kdex-ui-app-container id="app-container">
-      <kdex-example id="one"></kdex-example>
-      <kdex-example id="two"></kdex-example>
+      <app-example id="one"></app-example>
+      <app-example id="two"></app-example>
     </kdex-ui-app-container>
   </div>
 
   <script type="module">
     import '@kdex/ui';
-    import '/test/fixtures/kdex-example.js';
+    import '/test/fixtures/app-example.js';
   </script>
 </body>
 
