use navigation endpoint for customized nav

--- a/test/downloads.html
+++ b/test/downloads.html
@@ -21,25 +21,7 @@
 </head>
 
 <body>
-  <nav class="nav">
-    <div class="nav-dropdown">
-      <a class="nav-button" href="/app">Home</a>
-      <div class="nav-items">
-        <a href="/app/_/one/foo">Foo</a>
-        <a href="/app/_/two/bar">Bar</a>
-      </div>
-    </div>
-    <div class="nav-dropdown">
-      <a class="nav-button" href="/downloads">Downloads</a>
-      <div class="nav-items">
-        <a href="/downloads/_/one/foo">Foo</a>
-        <a href="/downloads/_/two/bar">Bar</a>
-      </div>
-    </div>
-    <div class="nav-dropdown">
-      <a class="nav-button login" href="/login">Login</a>
-    </div>
-  </nav>
+  <nav-example></nav-example>
 
   <div class="test-container">
     <h2>Downloads: Component Testing Area</h2>
