--- a/test/loggedout.html
+++ b/test/loggedout.html
@@ -16,7 +16,7 @@
     data-logout-label="Logout"
     data-logout-css-query="nav.nav .nav-dropdown a.logout"
     data-path-separator="/_/"
-    data-state-endpoint="/~/state"
+    data-state-endpoint="/~/state/out"
   >
 </head>
 
