--- a/test/loggedin.html
+++ b/test/loggedin.html
@@ -15,6 +15,7 @@
     data-logout-path="/~/oauth/logout"
     data-logout-label="Logout"
     data-logout-css-query="nav.nav .nav-dropdown a.logout"
+    data-navigation-endpoint="/~/navigation"
     data-path-separator="/_/"
     data-state-endpoint="/~/state/in"
   >
