simulate navigation login/out

--- a/test/downloads.html
+++ b/test/downloads.html
@@ -15,7 +15,7 @@
     data-logout-path="/~/oauth/logout"
     data-logout-label="Logout"
     data-logout-css-query="nav.nav .nav-dropdown a.logout"
-    data-navigation-endpoint="/~/navigation"
+    data-navigation-endpoint="/~/navigation-in"
     data-path-separator="/_/"
     data-state-endpoint="/~/state/out"
   >
