--- a/test/index.html
+++ b/test/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KDex UI Components Test Page</title>
-  <link rel="stylesheet" href="/test/main.css" type="text/css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="kdex-ui"
     data-check-batch-endpoint="/~/check/batch"
     data-check-single-endpoint="/~/check/single"
@@ -18,7 +17,8 @@
     data-navigation-endpoint="/~/navigation-in"
     data-path-separator="/_/"
     data-state-endpoint="/~/state/out"
-  >
+  />
+  <link rel="stylesheet" href="/test/main.css" type="text/css" />
 </head>
 
 <body>
