rename package to match org
Signed-off-by: Raymond Augé <rayauge@kdex.dev>

--- a/test/downloads.html
+++ b/test/downloads.html
@@ -20,7 +20,7 @@
   </div>
 
   <script type="module">
-    import { appMeta, userState } from '@kdex/ui';
+    import { appMeta, userState } from '@kdex-tech/ui';
     import '/test/fixtures/app-example.js';
 
     document.addEventListener('DOMContentLoaded', async () => {
